<resources>
    <string name="app_name">SenasoftQuindio2016</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ip">http://creamas.co</string>
    <string name="ip3">http://tanquesicoandina.hol.es</string>
    <string name="ip2">http://chenao.comli.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_bienvenida">Bienvenido(a)</string>
    <string name="texto_bienvenida">SENASOFT es el mayor encuentro de tecnología realizado por el SENA, como iniciativa de la Red de Conocimiento en Informática, Diseño y Desarrollo de Software. \nEl objetivo de este evento es propiciar entre los aprendices espacios que permitan transferencia de conocimiento, en las habilidades más significativas de la formación TIC.\n\ningrese al menu principal desde la esquina superior izquierda o selecccione una de las opciones del botón inferior</string>
    <string name="texto_que_es"><b>SENASOFT</b> es el mayor encuentro de tecnología realizado por el SENA, como iniciativa de la Red de Conocimiento en Informática, Diseño y Desarrollo de Software. El objetivo de este evento es propiciar entre los aprendices espacios que permitan transferencia de conocimiento, en las habilidades más significativas de la formación TIC.</string>
    <string name="texto_que_es_land1"><b>SENASOFT</b> es el mayor encuentro de tecnología realizado por el SENA, como iniciativa de la Red de Conocimiento en Informática, Diseño y Desarrollo de Software.</string>
    <string name="texto_que_es_land2">El objetivo de este evento es propiciar entre los aprendices espacios que permitan transferencia de conocimiento, en las habilidades más significativas de la formación TIC.</string>
    <string name="texto_que_es2">En esta séptima versión, SENASOFT reunirá a 400 aprendices y más de 90 instructores de los centros de formación que ofertan programas de formación pertenecientes a dicha red.</string>
    <string name="texto_dirigido_a">En etapa lectiva o productiva de los programas de formación Análisis y desarrollo de sistemas de información, Animación 3D, Producción de multimedia, Desarrollo de videojuegos, Programación de software , Gestión de redes de datos, Animación digital, Producción de medios audiovisuales digitales, Mantenimiento de equipos de cómputo, Diseño e Integración de multimedia, Mantenimiento de Equipos de Cómputo, Diseño e Instalación de Cableado Estructurado e Instalación de redes de computadores.</string>
    <string name="texto_lugar">En el Centro Cultural Metropolitano de Convenciones de Armenia, ubicado en la calle 26N #11-21, del 24 al 28 de Octubre de 2016. En este escenario tendremos las siguientes actividades:</string>
    <string name="texto_lugar_dirigido">* Competencias\n* Agenda académica nacional e internacional.\n* Muestra comercial \n* Rueda de proyección empresarial CREAMÁS \n* Agenda cultural </string>
    <string name="texto_creamas_que_es">CREAMÁS es una rueda de proyección empresarial para la comunidad SENA en la que se busca promover la gestión comercial de productos y servicios consolidados y la inversión en ideas y productos de negocios generados por aprendices de los centros de formación del SENA.</string>
    <string name="texto_creamas_objetivos">Promover una rueda de negocios en la que se incentive el emprendimiento y la generación de empresas por parte de los aprendices SENA y personas externas a la Institución, mediante el acercamiento de posibles inversores y otras empresas existentes en la región, con las cuales se puede realizar integración comercial y alianzas estratégicas.</string>
    <string name="texto_creamas_descripcion">Realizar una rueda de proyección empresarial que involucre emprendedores e inversionistas, que concluya en la selección de los 30 mejores proyectos de los aprendices de la regional, con perfil comercial y empresarial para ser promovidos mediante la gestión de incubadoras de empresas.</string>
    <string name="texto_creamas_proyeccion">Una de las iniciativas del evento es incentivar el desarrollo de ideas productivas generadas por los aprendices a partir del desarrollo de sus competencias en los ambientes de formación. Para 2016 esta actividad estará a cargo del proyecto líder en generación de ideas de negocios en la regional Quindio, Creamás.\n\nLa proyección de ideas de negocios Creamás - SENASoft 2016 es un espacio abierto para todo el SENA, donde los aprendices participantes, provenientes de todo el país tendrán la posibilidad de tener contacto con empresarios asistentes al evento. Adicionalmente, los proyectos participantes estarán en una vitrina a la que asistirán aprendices, instructores, directivos y visitantes de todo el país.\n\nEn la sección de Resultados podrás conocer sobre el proceso de validación de ideas CREAMÁS</string>
    <string name="texto_creamas_proyeccion_participantes">La Proyección de ideas de negocios Creamás - SENASoft 2016 está abierta para todos los aprendices del SENA a nivel nacional (en etapa lectiva o productiva) de cualquier programa de nivel técnico o tecnológico, que estén cursando como mínimo el segundo trimestre de formación. </string>
    <string name="texto_desc_muestra">Información sobre la muestra comercial.</string>
    <string name="texto_desc_seleccione_muestra">Seleccione las empresas de la lista para conocer su descripción.</string>
    <string name="texto_desc_categorias">Las categorias son parte fundamental de SENASoft, de esta manera se evidencia el logro de resultados de aprendizaje en los programas de formación que hacen parte de la red de conocimiento en informática, diseño y desarrollo de software.\n\nEn el evento se busca Propiciar espacios de sana competencia ademas de dar a conocer la calidad de nuestros aprendices al sector empresarial.</string>
    <string name="texto_desc_seleccione">Seleccione las categorias de la lista para conocer su descripción.</string>
    <string name="titulo_creamas_que_es">¿Qué es?.</string>
    <string name="titulo_creamas_objetivos">Objetivos.</string>
    <string name="titulo_creamas_2016">CREAMÁS 2016.</string>
    <string name="texto_dirigido_aprendices">Aprendices.</string>
    <string name="texto_dirigido_comunidad_sena">Comunidad SENA.</string>
    <string name="texto_dirigido_empresarios">Empresarios.</string>
    <string name="title_activity_registrate">Registro</string>
    <string name="title_activity_registro">Registro</string>
    <string name="item_inicio">Bienvenido(a)</string>
    <string name="item_informacion">SENASOFT 2016</string>
    <string name="item_informacion_que_es">INFORMACIÓN</string>
    <string name="item_informacion_dirigido">DIRIGIDO A</string>
    <string name="item_informacion_lugar">LUGAR</string>
    <string name="item_agenda">Agenda Académica</string>
    <string name="item_categorias">Categorias</string>
    <string name="item_rueda">Rueda de Proyección Empresarial</string>
    <string name="item_muestra">Empresas</string>
    <string name="item_creamas">CREAMÁS</string>
    <string name="categorias">Categorias</string>
    <string name="netTitle">Aplicaciones .Net</string>
    <string name="netDescrip">Desarrollar aplicaciones Windows, utilizando la suite de Visual Studio.NET.</string>
    <string name="phpTitle">Aplicaciones Web Php</string>
    <string name="phpDescrip">Desarrollar sitios web dinámicos, incorporando bibliotecas de componentes.</string>
    <string name="disenoTitle">Diseño Orientado a Objetos</string>
    <string name="disenoDescrip">Generar diseños orientados a objetos, usando los elementos y los conceptos fundamentales de UML.</string>
    <string name="bdTitle">Base de Datos</string>
    <string name="bdDescrip">Construir sentencias SQL a partir de un diseño de base de datos.</string>
    <string name="animacionTitle">Animación 3D</string>
    <string name="animacionDescrip">Diseñar, modelar y animar un personaje con su escenario.</string>
    <string name="androidTitle">Aplicaciones móviles android</string>
    <string name="androidDescrip">Desarrollar aplicaciones móviles para Android, usando buenas prácticas.</string>
    <string name="multimediaTitle">Producción Multimedia</string>
    <string name="multimediaDescrip">Diseñar e implementar soluciones de comunicación visual e interactiva.</string>
    <string name="videoJuegosTitle">Videojuegos</string>
    <string name="videoJuegosDescrip">Diseñar, desarrollar e implementar un demo funcional de un videojuego.</string>
    <string name="algoritmiaTitle">Algoritmia</string>
    <string name="algoritmiaDescrip">Plantear soluciones algorítmicas a problemas diversos, en el menor tiempo posible.</string>
    <string name="prodMultimediaTitle">Producción de Medios Audiovisuales</string>
    <string name="prodMultimediaDescrip">Realizar una producción audiovisual, teniendo en cuenta las tres fases.</string>
    <string name="hardeningTitle">Inst. Harding Sistemas Operativos</string>
    <string name="hardeningDescrip">Instalar un sistema operativo, con su respectivo aseguramiento.</string>
    <string name="redesTitle">Redes de Datos</string>
    <string name="redesDescrip">Diseñar e implementar soluciones de interconexión y servicios de red.</string>
    <string name="javaTitle">Java Web</string>
    <string name="javaDescrip">Desarrollar aplicaciones web funcionales, basadas en Java.</string>
    <string name="sistemasTitle">Sistemas Operativos de Red</string>
    <string name="sistemasDescrip">Instalar sistemas operativos de red y utilizar software de administración.</string>
    <string name="scrumTitle">Scrum</string>
    <string name="scrumDescrip">Definir los requisitos de carácter técnico que regirán la ejecución de las pruebas de la categoría PROYECTOS ágiles con scrum.</string>
    <string name="ofimaticaTitle">Ofimatica</string>
    <string name="ofimaticaDescrip">Brindar soluciones a diferentes planteamientos mediante el uso de herramientas de ofimatica...</string>
    <string name="creamasTitle">Rueda de proyección Creamás</string>
    <string name="creamasDescrip">Rueda de proyección empresarial para la comunidad SENA que promueve la generación de Ideas</string>
    <string name="jornada_uno">\tPrimera Jornada</string>
    <string name="jornada_dos">\tSegunda Jornada</string>
    <string name="jornada_tres">\tTercera Jornada</string>
    <string name="proceso_algoritmia_uno">Proceso: Estructuras Algorítmicas de Control y Uso de Matrices</string>
    <string name="proceso_algoritmia_dos">Proceso: Rutinas y Registros</string>
    <string name="proceso_algoritmia_tres">Proceso: Archivos Planos</string>
    <string name="proceso_algoritmia_uno_desc">Durante la prueba de esta jornada, se busca la solución a un determinado problema mediante el uso de estructuras algorítmicas de control y matrices.\n\nLas temáticas a trabajar en esta jornada son: Estructuras  condicionales:  Simples,  Dobles,  Compuestas y múltiples(casos)\nEstructuras Repetitivas: Mientras, Para, Repita y ciclos Anidados.\nArray Unidimensionales, Array Multidimensionales.</string>
    <string name="proceso_algoritmia_dos_desc">En esta jornada los participantes deben dar una solución a un problema planteado,implementando el uso de rutinas y registros.\n\nSe tendrá en cuenta: El tiempo empleado en la solución del problema, Funcionalidad, Coherencia, Simplicidad, Presentación\n\nLas temáticas a trabajar en esta jornada son: Uso de Funciones, Procedimientos, Registros y Utilizar las temáticas del día anterior</string>
</resources>